testing/tests/melt/negative/lvalues_16.c

int main() 
{
    int * n = &0; // Address of requires an lvalue
    return 0;
}
